--- a/app/view/template/izbornik.phtml
+++ b/app/view/template/izbornik.phtml
@@ -1,9 +1,11 @@
-<div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
-  <button class="menu-icon" type="button" data-toggle="responsive-menu"></button>
-  <div class="title-bar-title">Izbornik</div>
-</div>
 
-<div class="top-bar" id="responsive-menu">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Izbornik</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="top-bar" id="responsive-menu">
   <div class="top-bar-left">
     <ul class="dropdown menu" data-dropdown-menu>
       <li>
@@ -19,9 +21,6 @@
       </li> 
     </ul>
   </div>
-  <div class="top-bar-right">
-    <ul class="menu">
-      <li>Pero</li>
-    </ul>
+  
   </div>
-</div>
+</nav>
