--- a/app/view/template/head.phtml
+++ b/app/view/template/head.phtml
@@ -2,5 +2,15 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title><?php echo APP::config("nazivApp"); ?></title>
-<link rel="stylesheet" href="<?php echo APP::config("url") ?>public/css/foundation.css">
-<link rel="stylesheet" href="<?php echo APP::config("url") ?>public/css/app.css">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap-grid.css">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap-grid.css.map">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap-grid.min.css">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap-grid.min.css.map">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap-reboot.css">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap-reboot.css.map">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap-reboot.min.css">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap-reboot.min.css.map">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap.css">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap.css.map">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap.min.css">
+<link rel="stylesheet" href="<?php echo APP::config("url") ?>public\css\bootstrap.min.css.map">
